<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".login">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="278dp"
        android:layout_height="251dp"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/app_name"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/login" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        android:layout_width="390dp"
        android:layout_height="wrap_content"
        app:startIconDrawable="@drawable/baseline_email_24"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        android:layout_width="392dp"
        android:layout_height="71dp"
        app:startIconDrawable="@drawable/baseline_password_24"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:hint="password"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/forgotbtn"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/forgot_password_text" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="153dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/submit"
        android:textStyle="bold"
        app:cornerRadius="@android:dimen/system_app_widget_inner_radius" />

    <TextView
        android:layout_width="262dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="Don't have a account?"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/Register"
        android:layout_width="128dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/register"
        android:textSize="16sp"
        android:textStyle="bold" />
</LinearLayout>